fixed: gap between header and homepage

--- a/src/components/HomePage/HomeAbove/HomeAbove.module.scss
+++ b/src/components/HomePage/HomeAbove/HomeAbove.module.scss
@@ -1,6 +1,6 @@
 .homeWelcome {
     text-align: center;
-    margin: 150px 105px 147px;
+    margin: 100px 105px 147px;
     position: relative;
     cursor: none;
 
